--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
       <div class="last">
         <img src="Снимок экрана 2025-09-18 182417.png" alt="" />
       </div>
+      <div style="display: flex" class="wtrix">
+        <div class="profil">
+          <p class="im">И</p>
+        </div>
+        <p style="margin-left: 20px; font-size: 20px" class="dap">^</p>
+      </div>
     </div>
   </body>
 </html>
+
